--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
   >
 
   <EditText
-    android:id="@+id/identifier"
+    android:id="@+id/FieldUserIdentifier"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="96dp"
@@ -27,7 +27,7 @@
     />
 
   <EditText
-    android:id="@+id/password"
+    android:id="@+id/FieldUserPassword"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -38,11 +38,11 @@
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/identifier"
+    app:layout_constraintTop_toBottomOf="@+id/FieldUserIdentifier"
     />
 
   <Button
-    android:id="@+id/login"
+    android:id="@+id/buttonLogin"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
@@ -52,7 +52,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/password"
+    app:layout_constraintTop_toBottomOf="@+id/FieldUserPassword"
     app:layout_constraintVertical_bias="0.2"
     />
 
@@ -65,8 +65,8 @@
     android:layout_marginBottom="64dp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="@+id/password"
-    app:layout_constraintStart_toStartOf="@+id/password"
+    app:layout_constraintEnd_toEndOf="@+id/FieldUserPassword"
+    app:layout_constraintStart_toStartOf="@+id/FieldUserPassword"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.3"
     />
