--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,7 +57,7 @@
     />
 
   <ProgressBar
-    android:id="@+id/loading"
+    android:id="@+id/progressBarLoading"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
