Steps 6 to 9: error 404

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
   >
 
   <EditText
-    android:id="@+id/FieldUserIdentifier"
+    android:id="@+id/fieldUserIdentifier"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="96dp"
@@ -27,7 +27,7 @@
     />
 
   <EditText
-    android:id="@+id/FieldUserPassword"
+    android:id="@+id/fieldUserPassword"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -38,7 +38,7 @@
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/FieldUserIdentifier"
+    app:layout_constraintTop_toBottomOf="@+id/fieldUserIdentifier"
     />
 
   <Button
@@ -52,12 +52,12 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/FieldUserPassword"
+    app:layout_constraintTop_toBottomOf="@+id/fieldUserPassword"
     app:layout_constraintVertical_bias="0.2"
     />
 
   <ProgressBar
-    android:id="@+id/progressBarLoading"
+    android:id="@+id/loginProgressBarLoading"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -65,8 +65,8 @@
     android:layout_marginBottom="64dp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="@+id/FieldUserPassword"
-    app:layout_constraintStart_toStartOf="@+id/FieldUserPassword"
+    app:layout_constraintEnd_toEndOf="@+id/fieldUserPassword"
+    app:layout_constraintStart_toStartOf="@+id/fieldUserPassword"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.3"
     />
