--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -42,7 +42,7 @@
     />
 
   <Button
-    android:id="@+id/transfer"
+    android:id="@+id/buttonTransfer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
