--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,16 +5,16 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".ui.home.HomeFragment"
+  tools:context=".ui.account.AccountFragment"
   >
 
   <TextView
-    android:id="@+id/title"
+    android:id="@+id/tvTitle"
     style="@style/TextAppearance.Material3.BodyLarge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/balance"
-    app:layout_constraintBottom_toTopOf="@id/balance"
+    app:layout_constraintBottom_toTopOf="@id/tvBalance"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
     />
 
   <TextView
-    android:id="@+id/balance"
+    android:id="@+id/tvBalance"
     style="@style/TextAppearance.Material3.HeadlineLarge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -30,12 +30,42 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/title"
+    app:layout_constraintTop_toBottomOf="@id/tvTitle"
     tools:text="@tools:sample/full_names"
     />
 
+  <ProgressBar
+      android:id="@+id/pb_account_loading"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:layout_marginTop="64dp"
+      android:layout_marginBottom="64dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/tvBalance"
+      app:layout_constraintStart_toStartOf="@+id/tvBalance"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.3"
+      />
+
+  <Button
+      android:id="@+id/buttonReload"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="start"
+      android:layout_marginTop="16dp"
+      android:layout_marginBottom="64dp"
+      android:text="@string/action_reload"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/tvBalance"
+      app:layout_constraintVertical_bias="0.2"
+      />
+
   <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/transfer"
+    android:id="@+id/buttonTransfer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/activity_vertical_margin"
