--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -65,7 +65,7 @@
       />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/buttonTransfer"
+    android:id="@+id/buttonNavigateToTransfer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/activity_vertical_margin"
