--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -14,7 +14,7 @@
   >
 
   <EditText
-    android:id="@+id/recipient"
+    android:id="@+id/fieldRecipient"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="96dp"
@@ -27,7 +27,7 @@
     />
 
   <EditText
-    android:id="@+id/amount"
+    android:id="@+id/fieldAmount"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -38,11 +38,11 @@
     android:selectAllOnFocus="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/recipient"
+    app:layout_constraintTop_toBottomOf="@+id/fieldRecipient"
     />
 
   <Button
-    android:id="@+id/buttonTransfer"
+    android:id="@+id/buttonMakeTransfer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
@@ -52,12 +52,12 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/amount"
+    app:layout_constraintTop_toBottomOf="@+id/fieldAmount"
     app:layout_constraintVertical_bias="0.2"
     />
 
   <ProgressBar
-    android:id="@+id/loading"
+    android:id="@+id/pbTransferLoading"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -65,8 +65,8 @@
     android:layout_marginBottom="64dp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="@+id/amount"
-    app:layout_constraintStart_toStartOf="@+id/amount"
+    app:layout_constraintEnd_toEndOf="@+id/fieldAmount"
+    app:layout_constraintStart_toStartOf="@+id/fieldAmount"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.3"
     />
